# QmlDev

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CMakeUtils.cmake  Error.qml  Frameless.qml  FramelessWindow.qml  Main.cpp  Main.qml  Readme.md
.github/workflows/: ci.yml
QmlDeploy/: import.qml  qmldir
cmake/: Setup.cmake
